# wordclock

./: .gitignore  Cargo.toml  build.rs  uno-runner.sh
src/: display.rs  hw_config.rs  main.rs  time.rs  util.rs
src/display/: corner.rs  words.rs
